# OpenGL_tutorial

./: .gitignore  CMakeLists.txt  Callbacks.cpp  Callbacks.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Instance.cpp  Instance.h  Light.cpp  Light.h  Light_spec.h  Material.h  Obj_type.h  Object.cpp  Object.h  Ressources.cpp  Ressources.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture_spec.h  Triangle.cpp  Triangle.h  Tutorial.cpp  Tutorial.h  World.cpp  World.h  cmake_variables.h.in  debug_helper.cpp  debug_helper.h  exe  gmon.out  main.cpp  readme.md  test.cpp  test2.cpp
shaders/: fragment_shader.glsl  light_source.fshd  light_source.vshd  object.fshd  object.vshd  save.fshd  vertex_shader.glsl
